[package]
name = "pmtorrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.16", features = ["base64"] }
base64 = "0.13.0"
clap = { version = "3.2.20", features = ["derive"] }
lazy_static = "1.4.0"
ring = "0.16.20"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "io-util", "fs"] }
